--- a/app/profile/Profile.module.css
+++ b/app/profile/Profile.module.css
@@ -101,7 +101,7 @@
 .timetable-container p {
     margin-bottom: 2vh;
     font-size: large;
-    font-weight: 300;
+    font-weight: bold;
 }
 
 .timetable-holder {
@@ -115,7 +115,8 @@
     overflow-y: auto;
 }
 
-.timetable-holder, .timetable-day {
+.timetable-holder,
+.timetable-day {
 
     transform: rotateX(180deg);
     -moz-transform: rotateX(180deg);
@@ -132,12 +133,15 @@
     margin: 4vw;
     width: 70vw;
     min-height: 40vh;
+    background-color: #3332;
+    border-radius: 20px;
+    box-shadow: 0 0 10px #0004;
 }
 
 .timetable-day h3 {
-    font-size: 2vh;
-    font-weight: 600;
-    margin-bottom: 2vh;
+    font-size: 3vh;
+    font-weight: 500;
+    margin: 2vh 0px;
     color: #000;
     width: 70vw;
     text-align: center;
@@ -155,10 +159,25 @@
 .timetable-subject {
     width: 100%;
     height: 10vh;
-    border-radius: 20px;
+    border-radius: 10px;
     background-color: #fff;
+    box-shadow: 0 0 40px #fffc;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 2vh;
+    padding: 3vw;
+    font-size: 5vw;
+    font-weight: normal;
+    font-variant-caps: all-petite-caps;
+}
+
+.checkbox {
+    width: 5vw;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #333;
 }
