--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -3,15 +3,20 @@
     bottom: 0;
     display: flex;
     align-items: center;
-    width: 94vw;
-    height: 7vh;
+    width: 50vw;
+    height: 5vh;
     justify-content: space-evenly;
+    margin: 25vw;
     margin-bottom: 1vh;
     border-radius: 10px;
     padding: 1vw;
 
     background-color: rgb(255, 255, 255);
     box-shadow: 0 0 10px #aaa;
-    margin: 3vw;
     
+}
+
+.container .image {
+    margin-bottom: 5vh;
+    filter: drop-shadow(0 0 5px #666);
 }
