--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,19 @@
 }
 
 body {
-  background-color: #ddd;
+  background-image: linear-gradient(to bottom, #a7d9ff 0%, #85fbff 100%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   color: #333;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
