--- a/app/dashboard/dashboard.css
+++ b/app/dashboard/dashboard.css
@@ -10,12 +10,14 @@
 [type=radio]+img {
     cursor: pointer;
     width: 40px;
+    border-radius: 50%;
     transition: 0.3s;
+    padding: 3px;
 }
 
 /* CHECKED STYLES */
 [type=radio]:checked+img {
-    filter: drop-shadow( 0 0 15px #666);
+    border: solid 3px #232323;
     rotate: 20deg;
     scale: 1.2;
 }
