--- a/app/report/Report.module.css
+++ b/app/report/Report.module.css
@@ -3,40 +3,6 @@
     margin-bottom: 15vh;
 }
 
-.subject-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-    width: 80vw;
-    height: 20vh;
-    border-radius: 20px;
-    background-color: #fff;
-    margin: 10vw;
-    padding: 1vw 8vw;
-    margin-top: 15vh;
-}
-
-.subject-container p {
-    font-size: large;
-    font-weight: lighter;
-}
-
-.subjects {
-    width: 80vw;
-    height: 20vh;
-    border-radius: 20px;
-    padding: 20px;
-    min-height: 20vh;
-    font-weight: 700;
-}
-
-.subjects:focus {
-    outline: none;
-}
-
-
-
 .attendance-container {
     display: flex;
     align-items: center;
@@ -45,14 +11,13 @@
     min-height: 20vh;
     border-radius: 20px;
     background-color: #fff;
+    box-shadow: 0 0 10px #fff;
+    border: solid 4px #232323;
     margin: 10vw;
-    padding: 1vw 8vw;
+    padding: 1vw 8vh;
     margin-top: 5vh;
 }
 
-.attendance-container p {
-    margin-bottom: 2vh;
-}
 
 .attendance-report {
     display: flex;
@@ -71,113 +36,19 @@
 }
 
 .subject-attendance {
+
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 10vw;
+    height: 10vw;
+}
+
+.attendance-container p {
     font-size: 2vh;
     font-weight: bolder;
     color: #fff;
-    aspect-ratio: 1/1;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    padding: 1vh;
-    align-items: center;
-    background-color: #333;
-}
-
-.timetable-container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    width: 80vw;
-    min-height: 20vh;
-    border-radius: 20px;
-    background-color: #fff;
-    margin: 10vw;
-    padding: 1vw 8vw;
-    margin-top: 5vh;
-    padding-bottom: 2vh;
-}
-
-.timetable-container p {
-    margin-bottom: 2vh;
-    font-size: large;
-    font-weight: bold;
-}
-
-.timetable-holder {
-    width: 80vw;
-    min-height: 20vh;
-    border-radius: 20px;
-    display: flex;
-    /* justify-content: center; */
-    /* align-items: center; */
-    overflow-x: scroll;
-    overflow-y: auto;
-}
-
-.timetable-holder,
-.timetable-day {
-
-    transform: rotateX(180deg);
-    -moz-transform: rotateX(180deg);
-    /* Mozilla */
-    -webkit-transform: rotateX(180deg);
-    /* Safari and Chrome */
-    -ms-transform: rotateX(180deg);
-    /* IE 9+ */
-    -o-transform: rotateX(180deg);
-    /* Opera */
-}
-
-.timetable-day {
-    margin: 4vw;
-    width: 70vw;
-    min-height: 40vh;
-    background-color: #3332;
-    border-radius: 20px;
-    box-shadow: 0 0 10px #0004;
-}
-
-.timetable-day h3 {
-    font-size: 3vh;
-    font-weight: 500;
-    margin: 2vh 0px;
-    color: #000;
-    width: 70vw;
-    text-align: center;
-}
-
-.timetable-subjects {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    padding: 1vw 7vw;
-    align-items: center;
-    width: 70vw;
-}
-
-.timetable-subject {
-    width: 100%;
-    height: 10vh;
-    border-radius: 10px;
-    background-color: #fff;
-    box-shadow: 0 0 40px #fffc;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 2vh;
-    padding: 3vw;
-    font-size: 5vw;
-    font-weight: normal;
-    font-variant-caps: all-petite-caps;
-}
-
-.checkbox {
-    width: 5vw;
-    aspect-ratio: 1/1;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #333;
 }
