--- a/components/stats.module.css
+++ b/components/stats.module.css
@@ -5,11 +5,11 @@
     width: 96vw;
     height: 10vh;
     border-radius: 20px;
-    box-shadow: 0 0 20px #666;
+    box-shadow: 0 0 20px #d5fff6;
     background-color: #fff;
     margin: 2vw;
     padding: 1vw 8vw;
-
+    border: solid 4px #232323;
     position: fixed;
     top: 0;
 }
@@ -33,21 +33,34 @@
 }
 
 .attendance {
-    background-color: #222;
-    box-shadow: 0 0 10px #000;
-    color: #fff;
+    background-color: #bdfff5;
+    box-shadow: 0 0 10px #c5d4ff;
+    color: #ffffff;
     display: flex;
     margin-left: -5vw;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    width: 20vw;
-    height: 20vw;
+    width: 18vw;
+    height: 18vw;
+    border: solid 4px #232323;
     aspect-ratio: 1/1;
+    transition: 0.3s;
 }
 .percent {
-    font-size: 4vh;
-    font-weight: 900;
-    color:greenyellow;
-    filter: drop-shadow(0 0 8px #ada);
+    font-size: 3.5vh;
+    font-weight: 800;
+    padding: 10px;
+    color:rgb(0, 0, 0);
+}
+.percent::selection {
+    background-color: transparent;
+    border: none;
+}
+.attendance:hover {
+    transform: scale(1.1);
+}
+.attendance:active {
+    transform: scale(1.2);
+    translate: 0 2vh;
 }
