--- a/app/profile/Profile.module.css
+++ b/app/profile/Profile.module.css
@@ -1,5 +1,5 @@
 .container {
-    margin-top: 15vh;
+    margin-top: 20vh;
     margin-bottom: 15vh;
 }
 
@@ -52,6 +52,7 @@
     border: solid 4px #232323;
     margin-top: 5vh;
     padding-bottom: 2vh;
+    box-shadow: inset 0 0 10px rgba(53, 53, 53, 0.8);
 }
 
 .timetable-container p {
@@ -65,8 +66,6 @@
     min-height: 20vh;
     border-radius: 20px;
     display: flex;
-    /* justify-content: center; */
-    /* align-items: center; */
     overflow-x: scroll;
     overflow-y: auto;
 }
@@ -88,10 +87,12 @@
 .timetable-day {
     margin: 4vw;
     width: 70vw;
+    max-width: 400px;
     min-height: 40vh;
     background-color: rgba(119, 173, 255, 0.338);
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(192, 198, 255, 0.722);
+
 }
 
 .timetable-day h3 {
@@ -100,6 +101,7 @@
     margin: 2vh 0px;
     color: #000;
     width: 70vw;
+    max-width: 400px;
     text-align: center;
 }
 
@@ -110,10 +112,13 @@
     padding: 1vw 7vw;
     align-items: center;
     width: 70vw;
+    max-width: 400px;
+
 }
 
 .timetable-subject {
-    width: 100%;
+    width: 60vw;
+    max-width: 350px;
     height: 10vh;
     border-radius: 10px;
     background-color: #fff;
@@ -123,13 +128,15 @@
     align-items: center;
     margin-bottom: 2vh;
     padding: 3vw;
-    font-size: 5vw;
+    font-size: 2rem;
     font-weight: normal;
     font-variant-caps: all-petite-caps;
 }
 
 .checkbox {
     width: 5vw;
+    min-width: 40px;
+    max-width: 60px;
     aspect-ratio: 1/1;
     border-radius: 50%;
     display: flex;
