--- a/components/navbar.module.css
+++ b/components/navbar.module.css
@@ -1,12 +1,15 @@
 .container {
     position: fixed;
     bottom: 0;
+    left: 0;
+    transform: translate(50%);
     display: flex;
     align-items: center;
     width: 50vw;
     height: 10vh;
+    max-width: 500px;
     justify-content: space-evenly;
-    margin: 25vw;
+
     margin-bottom: 1vh;
     border-radius: 20px;
     padding: 1vw;
