--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,14 @@ body {
   color: #333;
 }
 
+.website {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 body::-webkit-scrollbar {
   display: none;
 }
@@ -27,3 +35,28 @@ body {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
+/* HIDE RADIO */
+[type=radio] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* IMAGE STYLES */
+[type=radio]+img {
+  cursor: pointer;
+  width: 40px;
+  border-radius: 50%;
+  transition: 0.3s;
+  padding: 3px;
+}
+
+/* CHECKED STYLES */
+[type=radio]:checked+img {
+  border: solid 3px #232323;
+  rotate: 20deg;
+  scale: 1.2;
+}
+
